--- a/front-end/src/components/request/request.styles.css
+++ b/front-end/src/components/request/request.styles.css
@@ -1,12 +1,39 @@
 .request-container{
     width: 100%;
-    height: 27.778vh;
+    height: 28vh;
     display:flex;
     background-color: white;
-    padding: 1.389vh 0.781vw 1.389vh 0.781vw;
+    padding: 2vh 0.781vw 1.389vh 0.781vw;
     box-sizing: border-box;
     gap: 0.521vw;
     border-radius: 0.781vw;
+    position: relative;
+}
+.request-header{
+    position: absolute;
+    width: 43.906vw;
+    top: 0;
+    left: 0;
+    height: 6.481vh;
+    background-color: white;
+    border-radius: 0.781vw;
+    font-size: 1.302vw;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    gap: 0.521vw;
+    padding: 0 0 0 0.521vw;
+    box-sizing: border-box;
+}
+.request-header-avatar{
+    width: 3.125vw;
+    height: 3.125vw;
+    background-color: #e7e7e7;
+    border-radius: 50%
+}
+.requests-profile-avatar-default{
+    width: 100%;
+    border-radius: 50%;
 }
 .request-info{
     width: 22.135vw;
@@ -17,6 +44,7 @@
     font-size: 1.042vw;
     color: #646464;
     font-weight: bold;
+    /* position: relative */
 }
 .request-picture{
     width: 19.688vw;
@@ -43,6 +71,7 @@
     font-size: 1.042vw;
     color: #646464;
     font-weight: bold;
+    /* position: relative; */
 }
 .request-description-noPicture{
     width: 42.344vw;   
@@ -52,4 +81,36 @@
     font-weight: bold;
     margin-bottom: 1.389vh;
     overflow: auto;
+}
+.btn-approve{
+    position: absolute;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    width: 7.8vw;
+    height: 5vh;
+    color: #ffff;
+    font-size: 1.302vw;
+    background-color: #78866B;
+    border-radius: 0.781vw;
+    top: 20vh;
+    right: 0.781vw;
+    border: 0;
+    cursor: pointer;
+}
+.btn-stop{
+    position: absolute;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    width: 7.8vw;
+    height: 5vh;
+    color: #ffff;
+    font-size: 1.302vw;
+    background-color: #a5a4a4;
+    border-radius: 0.781vw;
+    top: 20vh;
+    right: 0.781vw;
+    border: 0;
+    cursor: pointer;
 }
